# TridiagLU_measure

./: CMakeLists.txt
TridiagLU/: CMakeLists.txt
TridiagLU/include/: tridiagLU.h
TridiagLU/src/TridiagLU/: tridiagIterJacobi.cpp  tridiagLU.cpp
include/: mpi_params.hpp  utils.hpp
src/: CMakeLists.txt  main.cpp
